--- a/package.json
+++ b/package.json
@@ -12,29 +12,31 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
+    "@iconify/icons-iconamoon": "^1.2.0",
+    "@iconify/svelte": "^3.1.6",
+    "@skeletonlabs/skeleton": "2.7.0",
+    "@skeletonlabs/tw-plugin": "0.3.1",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
+    "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/typography": "0.5.10",
+    "@types/node": "20.10.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "autoprefixer": "10.4.16",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte": "^2.30.0",
+    "postcss": "8.4.33",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.10.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
+    "tailwindcss": "3.4.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.2",
-    "postcss": "8.4.33",
-    "autoprefixer": "10.4.16",
-    "tailwindcss": "3.4.1",
-    "@skeletonlabs/skeleton": "2.7.0",
-    "@skeletonlabs/tw-plugin": "0.3.1",
-    "vite-plugin-tailwind-purgecss": "0.2.0",
-    "@tailwindcss/typography": "0.5.10",
-    "@tailwindcss/forms": "0.5.7",
-    "@types/node": "20.10.7"
+    "vite-plugin-tailwind-purgecss": "0.2.0"
   },
   "type": "module",
   "dependencies": {
